--- a/ApertureHome/src/main/resources/static/css/login.css
+++ b/ApertureHome/src/main/resources/static/css/login.css
@@ -1,14 +1,36 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500');
 
 * {
-	/* background-image: url("../images/background.jpg"); */
 	font-family: "Montserrat", sans-serif;
+	font-weight: lighter;
+	box-sizing: border-box;
 }
 
-.bg-image { 
-	width: 100%; 
-	height: 100%; 
-	background-image: url('../images/background.jpg'); 
-	background-size: 100% 100%;  
-	background-repeat: no-repeat;
+body,html { 
+	height:100%
 } 
+
+.bg-image {
+	background-image: url('../images/background.jpg'); 
+	filter: blue(8px);
+	-webkit-filter: blur(8px);
+	height: 100%; 
+	background-size: cover;  
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.login {
+	background-color: rgba(40,119,79, 0.7);
+	color: white;
+	border-radius: 25px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 2;
+	width: 50%;
+	height: 40%;
+	padding: 20px;
+	text-align: center;
+}
