--- a/ApertureHome/src/main/resources/templates/delete.html
+++ b/ApertureHome/src/main/resources/templates/delete.html
@@ -8,14 +8,16 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet">
 <link th:href="@{css/navbar.css}" rel="stylesheet" />
+<link th:href="@{css/action.css}" rel="stylesheet" />
 </head>
 <body>
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- <div class="bg-image"> -->
-	<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: rgba(40,119,79, 1);">
+	<nav class="navbar navbar-expand-lg bg-body-tertiary"
+		style="background-color: rgba(40, 119, 79, 1);">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Aperture Home</a>
+			<a class="navbar-brand">Aperture Home</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +31,7 @@
 					<li class="nav-item"><a class="nav-link" href="./reports">Generate
 							Report</a></li>
 					<li class="nav-item dropdown"><a
-						class="nav-link dropdown-toggle" href="#" role="button"
+						class="nav-link dropdown-toggle" role="button"
 						data-bs-toggle="dropdown" aria-expanded="false"> Inventory
 							Actions </a>
 						<ul class="dropdown-menu">
@@ -46,21 +48,30 @@
 				<form class="d-flex" role="search" th:action="@{/search}"
 					method="get">
 					<input class="form-control me-2" type="search"
-						placeholder="Search..." name="keyword"
-						aria-label="Search">
+						placeholder="Search..." name="keyword" aria-label="Search">
 					<button class="btn btn-light" type="submit">Search</button>
 				</form>
 			</div>
 		</div>
 	</nav>
-	<form action="./deleted" method="post">
-		<div class="mb-3">
-			<label for="exampleInputEmail1" class="form-label">Product
-				Name: </label> <input type="text" name="productName" class="form-control"
-				id="exampleInputEmail1" aria-describedby="emailHelp">
-		</div>
-		<button type="submit" class="btn btn-secondary">Submit</button>
-		<h1 th:text="${message}"></h1>
-	</form>
+	<div class="bg-image"></div>
+	<div class="action">
+		<h4>Enter Product</h4>
+		<br></br>
+		<form action="./deleted" method="post">
+			<div class="mb-3">
+				<label for="exampleInputEmail1" class="form-label">Product
+					Name: </label> <input type="text" name="productName" class="form-control"
+					id="exampleInputEmail1" aria-describedby="emailHelp">
+			</div>
+<!-- 			<br></br> -->
+			<div class="mb-3">
+				<label class="tickbox">Tick here to Confirm Deletion <input
+					type="checkbox" required> <span class="checkmark"></span></label>
+			</div>
+			<button type="submit" class="btn btn-light">Submit</button>
+			<h6 th:text="${message}"></h6>
+		</form>
+	</div>
 </body>
 </html>
