--- a/ApertureHome/src/main/resources/templates/update.html
+++ b/ApertureHome/src/main/resources/templates/update.html
@@ -8,6 +8,7 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet">
 <link th:href="@{css/navbar.css}" rel="stylesheet" />
+<link th:href="@{css/action.css}" rel="stylesheet" />
 </head>
 <body>
 	<script
@@ -15,7 +16,7 @@
 	<!-- <div class="bg-image"> -->
 	<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: rgba(40,119,79, 1);">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Aperture Home</a>
+			<a class="navbar-brand">Aperture Home</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +30,7 @@
 					<li class="nav-item"><a class="nav-link" href="./reports">Generate
 							Report</a></li>
 					<li class="nav-item dropdown"><a
-						class="nav-link dropdown-toggle" href="#" role="button"
+						class="nav-link dropdown-toggle" role="button"
 						data-bs-toggle="dropdown" aria-expanded="false"> Inventory
 							Actions </a>
 						<ul class="dropdown-menu">
@@ -53,6 +54,10 @@
 			</div>
 		</div>
 	</nav>
+	<div class="bg-image"></div>
+	<div class="action">
+	<h4>Enter Product and Quantity</h4>
+	<br></br>
 	<form action="./updated" method="post">
 		<div class="mb-3">
 			<label for="exampleInputEmail1" class="form-label">Product
@@ -64,8 +69,9 @@
 			</label> <input type="number" step="0.01" name="quantity"
 				class="form-control" id="exampleInputPassword1">
 		</div>
-		<button type="submit" class="btn btn-secondary">Submit</button>
-		<h1 th:text="${message}"></h1>
+		<button type="submit" class="btn btn-light">Submit</button>
+		<h6 th:text="${message}"></h6>
 	</form>
+	</div>
 </body>
 </html>
