Slight change to way update function works

--- a/ApertureHome/src/main/resources/templates/addnew.html
+++ b/ApertureHome/src/main/resources/templates/addnew.html
@@ -62,7 +62,7 @@
 		<div class="mb-3">
 			<label for="exampleInputEmail1" class="form-label">Product
 				Name: </label> <input type="text" name="productName" class="form-control"
-				id="exampleInputEmail1" aria-describedby="emailHelp">
+				id="exampleInputEmail1" aria-describedby="emailHelp" required>
 		</div>
 		<div class="mb-3">
 			<label for="exampleInputPassword1" class="form-label">Product
@@ -77,12 +77,12 @@
 		<div class="mb-3">
 			<label for="exampleInputPassword1" class="form-label">Number
 				of Items: </label> <input type="number" name="quantityAvailable"
-				class="form-control" id="exampleInputPassword1">
+				class="form-control" id="exampleInputPassword1" required>
 		</div>
 		<div class="mb-3">
 			<label for="exampleInputPassword1" class="form-label">Price
 				per Item: </label> <input type="number" step="0.01" name="pricePerItem"
-				class="form-control" id="exampleInputPassword1">
+				class="form-control" id="exampleInputPassword1" required>
 		</div>
 		<button type="submit" class="btn btn-light">Submit</button>
 		<h6 th:text="${message}"></h6>
