--- a/ApertureHome/src/main/resources/templates/delete.html
+++ b/ApertureHome/src/main/resources/templates/delete.html
@@ -62,7 +62,7 @@
 			<div class="mb-3">
 				<label for="exampleInputEmail1" class="form-label">Product
 					Name: </label> <input type="text" name="productName" class="form-control"
-					id="exampleInputEmail1" aria-describedby="emailHelp">
+					id="exampleInputEmail1" aria-describedby="emailHelp" required>
 			</div>
 <!-- 			<br></br> -->
 			<div class="mb-3">
