--- a/ApertureHome/src/main/resources/templates/update.html
+++ b/ApertureHome/src/main/resources/templates/update.html
@@ -62,12 +62,12 @@
 		<div class="mb-3">
 			<label for="exampleInputEmail1" class="form-label">Product
 				Name :</label> <input type="text" name="productName" class="form-control"
-				id="exampleInputEmail1" aria-describedby="emailHelp">
+				id="exampleInputEmail1" aria-describedby="emailHelp" required>
 		</div>
 		<div class="mb-3">
 			<label for="exampleInputPassword1" class="form-label">Quantity:
-			</label> <input type="number" step="0.01" name="quantity"
-				class="form-control" id="exampleInputPassword1">
+			</label> <input type="number" name="quantity"
+				class="form-control" id="exampleInputPassword1" required>
 		</div>
 		<button type="submit" class="btn btn-light">Submit</button>
 		<h6 th:text="${message}"></h6>
