--- a/ApertureHome/src/main/resources/templates/index.html
+++ b/ApertureHome/src/main/resources/templates/index.html
@@ -14,18 +14,18 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 	<div class="bg-image"></div>
 	<div class="login">
-	<form action="./login" method="post">
+	<form action="./login" method="post" class="form">
 		<h1> Welcome to Aperture Home</h1>
 		<br></br>
 		<div class="mb-3">
 			<label for="exampleInputEmail1" class="form-label">Email
 				address</label> <input type="email" name="userEmail" class="form-control"
-				id="exampleInputEmail1" aria-describedby="emailHelp">
+				id="exampleInputEmail1" aria-describedby="emailHelp" required>
 		</div>
 		<div class="mb-3">
 			<label for="exampleInputPassword1" class="form-label">Password</label>
 			<input type="password" name="userPassword" class="form-control"
-				id="exampleInputPassword1">
+				id="exampleInputPassword1" required>
 		</div>
 		<button type="submit" class="btn btn-light">Submit</button>
 		<h5 th:text="${message}"></h5>
