--- a/ApertureHome/src/main/resources/static/css/add.css
+++ b/ApertureHome/src/main/resources/static/css/add.css
@@ -1,41 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
 * {
+	/* font used by entire webpage for consistency */
 	font-family: 'Quicksand', sans-serif;
 	font-weight: lighter;
 	box-sizing: border-box;
 }
 
 body,html { 
+	/* body has 100% of the browser height */
 	height:100%
 } 
 
 .bg-image {
+	/* getting image from static folder in project */
 	background-image: url('../images/homepage.jpg'); 
-/* 	filter: blue(8px);
-	-webkit-filter: blur(8px); */
+	/* centering and scaling to fit entire screen without repeat
+	using full height of body  */
 	height: 100%; 
 	background-size: cover;  
 	background-position: center;
 	background-repeat: no-repeat;
 }
 
+/* Centering the box on the webpage, adding a custom backgound color */
 .action {
+	/* green backgorund colour with some opacity */
 	background-color: rgba(40,119,79, 0.9);
+	/* text colour */
 	color: white;
+	/* adding curve to the corners of the login box */
 	border-radius: 25px;
+	/* fixing in the center of the screen */
 	position: absolute;
+	z-index: 2;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	z-index: 2;
 	width: 40%;
 	height: 65%;
-	padding: 20px;
+	/* padding to stop text being right at the top of the box */
+	padding: 25px;
+	/* aligning text in the center of the login box */
 	text-align: center;
+/*  	display: grid;
+	justify-content: center; */
 }
 
+/* Centering fill boxes */
 form .mb-3 {
-	display: grid;
+    display: grid;
 	justify-content: center;
 }
