--- a/ApertureHome/src/main/resources/templates/homepage.html
+++ b/ApertureHome/src/main/resources/templates/homepage.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="https://thymeleaf.org">
 <head>
-<title>Login Page</title>
+<title>Home page</title>
 <meta charset="ISO-8859-1">
+<!-- for multiple device compatibility -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Bootstrap link -->
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet">
+<!-- Linking to own CSS file -->
 <link th:href="@{css/navbar.css}" rel="stylesheet" />
 </head>
 <body>
+	<!-- Bootstrap link -->
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-	<script
-		type="text/javascript" th:src="@{js/reorder.js}"></script>
-	<!-- <div class="bg-image"> -->
-	<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: rgba(40,119,79, 1);">
+	<!-- Custom JavaScript link -->
+	<script type="text/javascript" th:src="@{js/reorder.js}"></script>
+	<!-- Navbar - based on Bootstrap element with custom formatting -->
+	<nav class="navbar navbar-expand-lg bg-body-tertiary"
+		style="background-color: rgba(40, 119, 79, 1);">
 		<div class="container-fluid">
 			<a class="navbar-brand">Aperture Home</a>
 			<button class="navbar-toggler" type="button"
@@ -25,64 +30,79 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<!-- Generating options to click on the navbar -->
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<!-- Will take back to homepage (homepage.html) from anywhere in the app -->
 					<li class="nav-item"><a class="nav-link active"
 						aria-current="page" href="./homepage">Home</a></li>
+					<!-- Will generate inventory and sales report -->
 					<li class="nav-item"><a class="nav-link" href="./reports">Generate
 							Report</a></li>
+					<!-- Creating dropdown to be able to select from multiple options -->
 					<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" role="button"
 						data-bs-toggle="dropdown" aria-expanded="false"> Inventory
 							Actions </a>
 						<ul class="dropdown-menu">
+							<!-- Leads to add an item page (addnew.html) -->
 							<li><a class="dropdown-item" href="./addItem">Add an
 									Item</a></li>
+							<!-- Leads to update a item page (update.html) -->
 							<li><a class="dropdown-item" href="./updateItem">Update
 									an Item</a></li>
+							<!-- Leads to delete an item page (delete.html) -->
 							<li><a class="dropdown-item" href="./deleteItem">Delete
 									an Item</a></li>
 						</ul></li>
+					<!-- Log out link to lead back to the login page (index.html) -->
 					<li class="nav-item"><a class="nav-link active"
 						aria-current="page" href="./">Log Out</a></li>
 				</ul>
+				<!-- Creating a search button to allow the user to enter a keyword to search by -->
 				<form class="d-flex" role="search" th:action="@{/search}"
 					method="get">
 					<input class="form-control me-2" type="search"
-						placeholder="Search..." name="keyword"
-						aria-label="Search">
+						placeholder="Search..." name="keyword" aria-label="Search">
+					<!-- Button to submit the search -->
 					<button class="btn btn-light" type="submit">Search</button>
 				</form>
 			</div>
 		</div>
 	</nav>
-<!-- 	<h5 th:text="'Welcome ' +${session.user.firstName}"></h5> -->
-<!-- 	<h1>Aperture Product Inventory</h1> -->
+	<!-- 	<h5 th:text="'Welcome ' +${session.user.firstName}"></h5> -->
+	<!-- 	<h1>Aperture Product Inventory</h1> -->
+	<!-- div to format background image -->
 	<div class="bg-image">
-	<table class="table table-success table-striped">
-		<thead>
-			<tr>
-				<th scope="col">Product Name</th>
-				<th scope="col">Product Category</th>
-				<th scope="col">Quantity Available</th>
-				<th scope="col">Price per Item</th>
-				<th scope="col">Quantity Sold</th>
-				<th scope="col">Reorder</th>
-			</tr>
-		</thead>
-		<tbody class="table-group-divider">
-			<tr th:each="product : ${products}">
-				<td th:text="${product.productName}"></td>
-				<td th:text="${product.productCategory}"></td>
-				<td th:text="${product.quantityAvailable}"></td>
-				<td th:text="'$'+${product.pricePerItem}"></td>
-				<td th:text="${product.quantitySold}"></td>
-				<td>
-				<button class="btn btn-light" type="button" th:onclick="showAlert()">Submit Request</button>
-				</td>
-			</tr>
-		</tbody>
-	</table>
+		<!-- Table to display inventory items from the database - base on Bootstrap table element -->
+		<table class="table table-success table-striped">
+			<thead>
+				<!-- Setting column names -->
+				<tr>
+					<th scope="col">Product Name</th>
+					<th scope="col">Product Category</th>
+					<th scope="col">Quantity Available</th>
+					<th scope="col">Price per Item</th>
+					<th scope="col">Quantity Sold</th>
+					<th scope="col">Reorder</th>
+				</tr>
+			</thead>
+			<tbody class="table-group-divider">
+				<!-- Filling in the columns for each item in the list of products by iterating -->
+				<tr th:each="product : ${products}">
+					<td th:text="${product.productName}"></td>
+					<td th:text="${product.productCategory}"></td>
+					<td th:text="${product.quantityAvailable}"></td>
+					<!-- Adding $ to make obvious price of item -->
+					<td th:text="'$'+${product.pricePerItem}"></td>
+					<td th:text="${product.quantitySold}"></td>
+					<td>
+						<!-- Button to submit request to reorder product (dummy button for now) -->
+						<button class="btn btn-light" type="button"
+							th:onclick="showAlert()">Submit Request</button>
+					</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
-	<!-- </div> -->
 </body>
 </html>
