--- a/ApertureHome/src/main/resources/templates/index.html
+++ b/ApertureHome/src/main/resources/templates/index.html
@@ -3,33 +3,45 @@
 <head>
 <title>Login Page</title>
 <meta charset="ISO-8859-1">
+<!-- for multiple device compatibility -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Bootstrap link -->
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet">
+<!-- Linking to own CSS file -->
 <link th:href="@{css/login.css}" rel="stylesheet" />
 </head>
 <body>
+	<!-- Bootstrap link -->
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- div to format background image -->
 	<div class="bg-image"></div>
+	<!-- Login form - base code is Bootstrap element -->
 	<div class="login">
-	<form action="./login" method="post" class="form">
-		<h1> Welcome to Aperture Home</h1>
-		<br></br>
-		<div class="mb-3">
-			<label for="exampleInputEmail1" class="form-label">Email
-				address</label> <input type="email" name="userEmail" class="form-control"
-				id="exampleInputEmail1" aria-describedby="emailHelp" required>
-		</div>
-		<div class="mb-3">
-			<label for="exampleInputPassword1" class="form-label">Password</label>
-			<input type="password" name="userPassword" class="form-control"
-				id="exampleInputPassword1" required>
-		</div>
-		<button type="submit" class="btn btn-light">Submit</button>
-		<h5 th:text="${message}"></h5>
-	</form>
+		<form action="./login" method="post">
+			<!-- Welcome message to the user -->
+			<h1>Welcome to Aperture Home</h1>
+			<br></br>
+			<!-- Box for user to enter their email address -->
+			<div class="mb-3">
+				<label for="exampleInputEmail1" class="form-label">Email
+					address</label> <input type="email" name="userEmail" class="form-control"
+					id="exampleInputEmail1" aria-describedby="emailHelp" required>
+				<!-- Required handles error in case field is submitted empty-->
+			</div>
+			<!-- Box for user to enter their password -->
+			<div class="mb-3">
+				<label for="exampleInputPassword1" class="form-label">Password</label>
+				<input type="password" name="userPassword" class="form-control"
+					id="exampleInputPassword1" required>
+				<!-- Required handles error in case field is submitted empty-->
+			</div>
+			<button type="submit" class="btn btn-light">Submit</button>
+			<!--  Allow message to display if login is not successful -->
+			<h5 th:text="${message}"></h5>
+		</form>
 	</div>
 </body>
 </html>
